@@ -1,3 +1,13 @@
+2007-09-20  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_dirwrite.c: Always write tile/strip offsets and sizes
+	using LONG8 type when output format is BigTIFF.  The
+	TIFFWriteDirectoryTagLongLong8Array() function was restructured
+	accordingly.
+
+	* tif_dirread.c: Improvements to error reporting text in 
+	TIFFFetchDirectory().
+
 2007-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* test/images: Added a small collection of test images for use by
